--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-concat": "^0.4.0",
     "load-grunt-tasks": "^0.6.0"
   }
 }
